Body overflow fix

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,11 @@
 body {
-  font: 13px/18px Arimo, 'Open Sans',"Lucida Grande","Lucida Sans Unicode",Tahoma, Arial,Helvetica,Verdana,sans-serif
- 
+  font: 13px/18px Arimo, 'Open Sans',"Lucida Grande","Lucida Sans Unicode",Tahoma, Arial,Helvetica,Verdana,sans-serif;
+  position: relative;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+
 }
 
 html {
